# robotics-with-isaac

./: README.md
Isaac/: waypoint_graph_export.json
Isaac/Simulate Enviroment/: full_warehouse_multirobot.usd  hospital_cuopt.usd
control_robot/iw_sim_control/iw_sim_control/: CMakeLists.txt  package.xml
robotclient/: README.md  RobotClient.service  RobotClient.sln
robotclient/ConfigApp/: ConfigApp.csproj  ConfigData.cs
robotclient/Entity/: VDA5050Configuration.cs
robotclient/Entity/Api/: MqttSettings.cs  RobotSettings.cs  SettingResponse.cs  VDASettings.cs
robotclient/LocalMemory/: LocalMemory.csproj  ShareMemoryData.cs
robotclient/MqttService/: DataContainer.cs  MqttClientService.cs  MqttService.csproj  ProcessVDA5050Message.cs
robotclient/MqttService/Interfaces/: IMqttClientService.cs
robotclient/RobotClient/: Program.cs  RobotClient.csproj  RobotClient.http  WeatherForecast.cs
robotclient/RobotClient/ConfigApp/: appsettings.json
robotclient/RobotClient/ConfigLog/: nlog-windows.config  nlog.config
robotclient/RobotClient/Controllers/: NetworkConfigurationController.cs  RobotConfigurationController.cs  VDAConfigurationController.cs  WeatherForecastController.cs
robotclient/RobotClient/Properties/: launchSettings.json
robotclient/RobotClient/Startups/: StartupApp.cs
robotclient/RobotClient/Worker/: RobotWorker.cs
robotclient/RobotClient/XmlConfig/: robotConfig.xml
robotclient/RobotClient/maps/: warehouse_29_10_2025.pgm  warehouse_edited.yaml
robotclient/RosNodeWrapper/: DataContainer.cs  RosNodeWrapper.csproj  VDARosClient.cs
robotclient/RosNodeWrapper/Interfaces/: ISubscribeDisruptor.cs  IVDARosClient.cs
robotclient/VDA5050Message/: Connection.cs  Factsheet.cs  InstantActions.cs  MessageBase.cs  Order.cs  State.cs  VDA5050MessageBase.cs  Visualization.cs
robotclient/VDA5050Message/Base/: Action.cs  AgvGeometry.cs  AgvPosition.cs  BatteryState.cs  ControlPoint.cs  Corridor.cs  Edge.cs  Enum.cs  EnumData.cs  Error.cs  Header.cs  Info.cs  Load.cs  LoadSpecification.cs  Map.cs  Node.cs  PhysicalParameters.cs  ProtocolFeatures.cs  ProtocolLimits.cs  SafetyState.cs  Trajectory.cs  TypeSpecification.cs  Velocity.cs
robotcontrolserver/: Architecture.md  BusinessAnalyse.md  README.md  RobotControllerServer.sln
robotcontrolserver/ApiObject/: ApiObject.csproj  AssignMap.cs  CuoptVRPRequest.cs  ImportMatrix.cs
robotcontrolserver/ApiObject/CRUD/: Create.cs  Delete.cs  Query.cs  Update.cs
robotcontrolserver/ApiObject/Cuopt/: CuOptGraphSolveRequest.cs  CuoptVRPRequest.cs  CuoptVRPResponse.cs
robotcontrolserver/BusinessLayer/: BaseBL.cs  BusinessLayer.csproj  MapBL.cs  PointBL.cs  PointTypeBL.cs  RobotBL.cs  RobotTaskBL.cs  RobotTaskCoordinator.cs  RobotTaskTemplateBL.cs  RobotTypeBL.cs  RouteBL.cs
robotcontrolserver/BusinessLayer/Interfaces/: IBaseBL.cs  IMapBL.cs  IPointBL.cs  IPointTypeBL.cs  IRobotBL.cs  IRobotCoordinator.cs  IRobotTaskBL.cs  IRobotTaskCoordinator.cs  IRobotTaskTemplateBL.cs  IRobotTypeBL.cs  IRouteBL.cs
robotcontrolserver/ConfigData/: ConfigData.cs  ConfigData.csproj
robotcontrolserver/CuOptClientService/: CuOptClient.cs
robotcontrolserver/CuOptClientService/Common/: CuOpt2VDA.cs  CuOptBuild.cs  DTO2CuOpt.cs
robotcontrolserver/CuOptClientService/Interfaces/: ICuOptClient.cs
robotcontrolserver/DataAccess/: BaseDA.cs  DataAccess.csproj  MapDA.cs  PointDA.cs  PointTypeDA.cs  RobotDA.cs  RobotTaskDA.cs  RobotTaskTemplateDA.cs  RobotTypeDA.cs  RouteDA.cs
robotcontrolserver/DataAccess/Extensions/: DapperExtensions.cs
robotcontrolserver/DataAccess/Helper/: DbManagement.cs
robotcontrolserver/DbObject/: BaseDbObject.cs  DbObject.csproj  Map.cs  Point.cs  PointType.cs  Robot.cs  RobotTask.cs  RobotTaskTemplate.cs  RobotType.cs  Route.cs
robotcontrolserver/RobotControl/: AGVControl.cs  Class1.cs  RobotControl.csproj
robotcontrolserver/RobotControlServer/: Program.cs  RobotControlServer.csproj  RobotControlServer.http  WeatherForecast.cs
robotcontrolserver/ShareMemoryData/: LocalMemory.cs  MapDownloadTokenStore.cs  RobotStatus.cs  ShareMemoryData.csproj
robotcontrolserver/VDA5050Message/: Connection.cs  InstantActions.cs  State.cs  VDA5050MessageBase.cs
robotcontrolserver/VDA5050Message/Base/: Edge.cs  (+10 more)
robotcontrolserver/sql/: sqlite_schema.sql
roswrapper/: .gitignore  README.md  compile_commands.json
roswrapper/VDAMissionClient/: CMakeLists.txt  package.xml  vda_action_handlers.xml
roswrapper/VDAMissionClient/include/VDA5050Wrapper/: AGVPositionWrapper.hpp  AGVStateWrapper.hpp  ActionParameterWrapper.hpp  ActionStateWrapper.hpp  ActionWrapper.hpp  BatteryStateWrapper.hpp  ControlPointWrapper.hpp  EdgeStateWrapper.hpp  EdgeWrapper.hpp  FactsheetWrapper.hpp  InstantActionsWrapper.hpp  NodePositionWrapper.hpp  NodeStateWrapper.hpp  NodeWrapper.hpp  OrderWrapper.hpp  PhysicalParametersWrapper.hpp  SafetyStateWrapper.hpp  TrajectoryWrapper.hpp  TypeSpecificationWrapper.hpp  VelocityWrapper.hpp  VisualizationWrapper.hpp
roswrapper/VDAMissionClient/include/VDAMissionClient/: VDAActionAMRHandler.hpp  VDAActionHandlerInitialPose.hpp  VDAMissionClient.hpp  Vda5050ActionHandlerBase.hpp
roswrapper/VDAMissionClient/src/: AGVPositionWrapper.cpp  AGVStateWrapper.cpp  ActionParameterWrapper.cpp  ActionStateWrapper.cpp  ActionWrapper.cpp  BatteryStateWrapper.cpp  ControlPointWrapper.cpp  EdgeStateWrapper.cpp  EdgeWrapper.cpp  ErrorWrapper.cpp  FactsheetWrapper.cpp  InfoWrapper.cpp  InstantActionsWrapper.cpp  LoadWrapper.cpp  NodePositionWrapper.cpp  NodeStateWrapper.cpp  NodeWrapper.cpp  OrderWrapper.cpp  PhysicalParametersWrapper.cpp  SafetyStateWrapper.cpp  TrajectoryWrapper.cpp  TypeSpecificationWrapper.cpp  VDAActionAMRHandler.cpp  VDAActionHandlerInitialPose.cpp  VDAMissionClient.cpp  VelocityWrapper.cpp  VisualizationWrapper.cpp
roswrapper/vda5050_msgs/: CMakeLists.txt  package.xml
sharelibrary/: README.md  sharelibrary.sln
sharelibrary/CommonLib/: Common.cs  CommonFunc.cs  CommonLib.csproj  CommonLog.cs  ConstData.cs
sharelibrary/VDA5050Message/: MessageBase.cs  Visualization.cs
(+68 files in other folders)
